--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 == Disable account is a thunderbird extension to manually activate and deactivate mail accounts 
 
+== Attention, follow this instruction to avoid loss of data
+Thunderbird does not pay attention to accounts which are not listed in the accountmanager propertiy
+mail.accountmanager.accounts
+
+So if you remove or add accounts to Thunderbird, be sure to activate all disabled accounts. Otherwise it is most likely that Thunderbird mixes accounts and you will loose your email data!
+
 == Build extension file and installation
 
 === Linux 
@@ -9,14 +15,14 @@ e.g. zip -r tbdisableaccounts@iltisworld.de.xpi *
 
 === Thunderbird installation
 Open "Menu" -> "Extras" -> "Add-ons" -> "Install"
-Select xpi file, install the extension and restart thunderbird
+Select XPI file, install the extension and restart Thunderbird
 
 === Manually installation
-switch to your thunderbird extension folder
+switch to your Thunderbird extension folder
 e.g. /home/[USERNAME]/.thunderbird/[PROFIL_NAME]/extensions
 create folder "tbdisableaccounts@iltisworld.de" and copy all extension files into 
 the new folder
-start thunderbird 
+start Thunderbird 
 Open "Extras" -> "Add-ons" and activate the extension
 
 == Windows
