--- a/chrome/locale/en-US/tbda.properties
+++ b/chrome/locale/en-US/tbda.properties
@@ -1,2 +1,2 @@
-notFoundAlert=No files were found matching the criteria.
-deleteAlert=Click OK to have all your files deleted.
+no-accounts=No accounts found.
+at-least-one-accounts=Please activate at least one account.
